# BYGLab

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  IntakeMachCalculator.jsx  README.md  docker-compose.yml
benchmarks/openwam/: Dockerfile  README.md
benchmarks/openwam/analysis/: exact_riemann.py  verify_6cyl_plausibility.py  verify_acoustic_resonance.py  verify_engine_plausibility.py  verify_sod_shock_tube.py
benchmarks/openwam/cases/acoustic_resonance/: acoustic_resonance.txt
benchmarks/openwam/cases/engine_s54_2500rpm/: engine_s54_2500rpm.txt
benchmarks/openwam/cases/engine_s54_5000rpm/: engine_s54_5000rpm.txt
benchmarks/openwam/cases/engine_s54_7000rpm/: engine_s54_7000rpm.txt
benchmarks/openwam/cases/engine_s54b32_6cyl_4900rpm/: engine_s54b32_6cyl_4900rpm.txt  generate_input.py
benchmarks/openwam/cases/quiescent/: quiescent.txt
benchmarks/openwam/cases/single_pipe/: single_pipe.txt
benchmarks/openwam/cases/sod_shock_tube/: sod_shock_tube.txt
rust/: Cargo.toml
rust/crates/byglab-cli/: Cargo.toml  example-config.json
rust/crates/byglab-cli/src/: main.rs
rust/crates/byglab-core/: Cargo.toml
rust/crates/byglab-core/src/: boundary.rs  branch_junction.rs  camshaft.rs  camshaft_presets.rs  case.rs  combustion.rs  crank_mechanism.rs  cylinder.rs  (+12 more)
rust/crates/byglab-wasm/: Cargo.toml
rust/crates/byglab-wasm/src/: lib.rs
scripts/: probe_out.txt  probe_s54.py
services/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
services/web/src/: App.jsx  api.js  index.css  wasm-worker.js
(+19 files in other folders)
