[package]
name = "byglab-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byglab-core = { path = "../byglab-core" }
wasm-bindgen = "0.2"
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

# wasm-bindgen and wasm-pack must be kept on matching major/minor versions,
# or `init()` fails at runtime with a version-mismatch panic. Pin here as a
# reminder when bumping either.
